@@ -69,6 +69,7 @@ dependencies {
     implementation(project(":shared:updater"))
     implementation(project(":shared:nanohttp4k"))
     implementation(project(":desktop:mac_utils"))
+    implementation(project(":desktop:slf4j-impl"))
 }
 
 aboutLibraries {
@@ -105,6 +106,8 @@ compose {
             // Define the main class for the application.
             mainClass = "$desktopPackageName.AppKt"
             nativeDistributions {
+                // avoid java 25 warning
+                jvmArgs("--enable-native-access=ALL-UNNAMED")
                 modules(
                     "java.instrument",
                     "jdk.unsupported",
